feat: preview image
